updated readme + about page + minor styling changes

--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -7,6 +7,7 @@ $beige-light: #D0D1CD;
 $beige-lighter: #EFF0EB;
 $blue: #7289da;
 $green: #43b581;
+$dark-green: #11633e;
 $black: #16171a;
 
 
@@ -16,7 +17,7 @@ $family-sans-serif: "Nunito", sans-serif;
 $grey-dark: #282b30;
 $grey-light: $beige-light;
 $primary: $purple;
-$link: $pink;
+$link: $green;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
