--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -1,4 +1,3 @@
-
 // Set your brand colors
 $purple: #692a2a;
 $pink: #FA7C91;
@@ -31,27 +30,21 @@ $navbar-item-color: $pink;
 $modal-content-width: auto;
 
 // Import only what you need from Bulma
-@import "~bulma/sass/utilities/_all.sass";
-@import "~bulma/sass/base/_all.sass";
-@import "~bulma/sass/elements/box.sass";
-@import "~bulma-extensions/bulma-checkradio/dist/css/bulma-checkradio.sass";
-// @import "~bulma-extensions/bulma-calendar/dist/css/bulma-calendar.sass";
-// @import "~bulma-extensions/bulma-divider/dist/css/bulma-divider.sass";
-@import "~bulma/sass/elements/button.sass";
-@import "~bulma/sass/elements/container.sass";
-@import "~bulma/sass/elements/form.sass";
-@import "~bulma/sass/elements/title.sass";
-@import "~bulma/sass/elements/content.sass";
-@import "~bulma/sass/components/modal.sass";
-@import "~bulma/sass/components/message.sass";
-@import "~bulma/sass/elements/image.sass";
-@import "~bulma/sass/elements/progress.sass";
-@import "~bulma/sass/components/card.sass";
-@import "~bulma/sass/components/navbar.sass";
-@import "~bulma/sass/layout/hero.sass";
-@import "~bulma/sass/components/level.sass";
-@import "~bulma/sass/layout/footer.sass";
-@import "~bulma/sass/grid/columns.sass";
-@import "~bulma/sass/layout/section.sass";
-
-
+@import '~bulma/sass/utilities/_all.sass';
+@import '~bulma/sass/base/_all.sass';
+@import '~bulma/sass/elements/box.sass';
+@import '~bulma/sass/elements/button.sass';
+@import '~bulma/sass/elements/container.sass';
+@import '~bulma/sass/elements/form.sass';
+@import '~bulma/sass/elements/title.sass';
+@import '~bulma/sass/elements/content.sass';
+@import '~bulma/sass/components/modal.sass';
+@import '~bulma/sass/components/message.sass';
+@import '~bulma/sass/elements/image.sass';
+@import '~bulma/sass/components/card.sass';
+@import '~bulma/sass/components/navbar.sass';
+@import '~bulma/sass/components/tabs.sass';
+@import '~bulma/sass/layout/hero.sass';
+@import '~bulma/sass/components/level.sass';
+@import '~bulma/sass/grid/columns.sass';
+@import '~bulma/sass/layout/section.sass';
