--- a/app/frontend/src/styles/index.scss
+++ b/app/frontend/src/styles/index.scss
@@ -1,7 +1,11 @@
-@charset "utf-8";
+@charset 'utf-8';
 
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+// Remote styles
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
+// Dependency styles
 @import 'bulma';
-@import 'spinner';
+
+// Local styles
 @import 'main';
+@import 'spinner';
