--- a/app/frontend/src/styles/spinner.scss
+++ b/app/frontend/src/styles/spinner.scss
@@ -31,6 +31,17 @@ $d: 175.6449737548828;
 	}
 }
 
+.full-page {
+  height: 100%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#root > .full-page {
+	height: calc(100vh - 150px);
+}
+
 @keyframes strokeanim {
 	0% {
     stroke-dasharray: 1, 300;
