Added Department Fetching

--- a/app/frontend/src/styles/searchbar.scss
+++ b/app/frontend/src/styles/searchbar.scss
@@ -31,7 +31,7 @@ body{font-size:1em;}
   padding:.5em 2em;
 }
 .dropdown-item:hover {
-  background-color:#eee;
+  background-color:#fff;
   cursor:pointer;
 }
 
