--- a/app/frontend/src/styles/index.scss
+++ b/app/frontend/src/styles/index.scss
@@ -6,6 +6,7 @@
 // Dependency styles
 @import 'bulma';
 @import '~font-awesome/css/font-awesome.min.css';
+@import '~react-tagsinput/react-tagsinput.css' ;
 
 // Local styles
 @import 'main';
