--- a/app/frontend/src/styles/searchresults.scss
+++ b/app/frontend/src/styles/searchresults.scss
@@ -1,57 +1,34 @@
-body{font-size:1em;}
-.results {
-
+html, body, #root {
+    height: 100%;
 }
 
-.title{
-    box-shadow: 1px 1px 5px #ccc;
-    position: absolute;
-    top: 4em;
-    z-index: 1000;
-    text-align: left;
-    line-height:0.5em;
+#search_results_container {
+    width: 100%;
+    min-height: 100%;
+    font-size: 1em;
+    background-color: #2a363f;
 }
 
-.desc{
-    box-shadow: 1px 1px 5px #ccc;
-    border-radius:1px;
-    position: absolute;
+.box {
+    width: 400px;
+    margin: auto;
+}
+
+.light_green_box {
+    background-color: #67c896;
+    border-radius: 5px;
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.research_item {
     top: 6em;
     z-index: 1000;
     text-align: left;
     line-height:1.5em;
-    padding: 0;
 }
 
-.tags{
-    box-shadow: 1px 1px 5px #ccc;
-    border-radius:1px;
-    position: absolute;
-    top: 2em;
-    z-index: 1000;
-    text-align: left;
-    line-height:1.5em;
-    padding: 0;
-}
-
-.department{
-    box-shadow: 1px 1px 5px #ccc;
-    border-radius:1px;
-    position: absolute;
-    top: 2em;
-    z-index: 1000;
-    text-align: left;
-    line-height:1.5em;
-    padding: 0;
-}
-
-.professor{
-    box-shadow: 1px 1px 5px #ccc;
-    border-radius:1px;
-    position: absolute;
-    top: 2em;
-    z-index: 1000;
-    text-align: left;
-    line-height:1.5em;
-    padding: 0;
+#title {
+    color: white;
 }
