added grid for posts + styling

--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -7,6 +7,7 @@ $beige-lighter: #EFF0EB;
 $blue: #7289da;
 $green: #43b581;
 $dark-green: #11633e;
+$background-color: #2A363F;
 $black: #16171a;
 
 
