--- a/app/frontend/src/styles/main.scss
+++ b/app/frontend/src/styles/main.scss
@@ -2,6 +2,7 @@
 
 html {
 	overflow-y: auto;
+	background-color: $background-color;
   }
   
   #root > :not(.is-fullheight, .navbar, .home) {
@@ -146,4 +147,120 @@ html {
 	.select {
 		color: $link !important;
 	}
+
+// Flex Grid
+$this-padding: 5px;
+$this-tile-size-sm: 100%;
+$this-tile-size-md: 33.3333%;
+$this-tile-size-lg: 25%;
+
+.flex-container {
+	padding: 0;
+	padding-top: 35px;
+  margin: - $this-padding;
+  font-size: 0;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.flex-item {
+  position: relative;
+  display: inline-block;
+  height: 480px !important;
+  width: $this-tile-size-sm;
+  padding-top: $this-tile-size-sm;
+	font-size: 15px;
+  color: white;
+	text-align: center;
+	margin-bottom: 30px;
   
+  @media (min-width: 856px) {
+    width: $this-tile-size-md;
+    padding-top: $this-tile-size-md;
+  }
+  
+  @media (min-width: 1100px) {
+    width: $this-tile-size-lg;
+    padding-top: $this-tile-size-lg;
+  }
+  
+  &-inner {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 10px;
+    background: transparent;
+    
+    &-content {}
+  }
+}
+
+.post {
+	color: #2a363f;
+	display: block;
+	line-height: 1.5em;
+}
+
+.card-img-top {
+	width: 100%;
+	border-top-left-radius: calc(.25rem - 1px);
+	border-top-right-radius: calc(.25rem - 1px);
+}
+	
+.rounded {
+	border-radius: 30px !important;
+}
+
+.tag {
+	-webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+	color: #fff;
+	font-weight: bold;
+	background: #3498db;
+	padding: 5px 10px;
+	border-radius: 0.3em;
+	margin: 5px;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	line-height: 1.5;
+	white-space: nowrap;
+}
+
+.is-centered {
+	display: inline-block;
+}
+
+.is-pink-bc {
+	background: $pink;
+}
+
+.card-img-top {
+	width: 100%;
+	border-top-left-radius: calc(.25rem - 1px);
+	border-top-right-radius: calc(.25rem - 1px);
+}
+
+.circle {
+	border-radius: 50%;
+	width: 165px;
+	height: 165px;
+	background-color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: -35px auto 0;
+	z-index: 1;
+	
+	img.post-icon {
+    border: 2px solid white;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+	}
+}
