--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -1,5 +1,5 @@
 // Set your brand colors
-$purple: #692a2a;
+$purple: #3f51b5;
 $pink: #FA7C91;
 // $brown: #b5b5b5;
 $beige-light: #D0D1CD;
@@ -22,7 +22,7 @@ $widescreen-enabled: false;
 $fullhd-enabled: false;
 
 // Update some of Bulma's component variables
-$body-background-color: $beige-lighter;
+$body-background-color: #ffffff;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
@@ -49,3 +49,5 @@ $modal-content-width: auto;
 @import '~bulma/sass/components/level.sass';
 @import '~bulma/sass/grid/columns.sass';
 @import '~bulma/sass/layout/section.sass';
+
+@import '~bulma-steps/src/sass/index.sass';
