--- a/app/frontend/src/styles/main.scss
+++ b/app/frontend/src/styles/main.scss
@@ -293,3 +293,20 @@ $this-tile-size-lg: 25%;
 	background-color: $link;
 	color: #fff;
 }
+
+.status {
+	-webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+	//color: #fff;
+	//font-weight: bold;
+	background: #ffdd57;
+	padding: 5px 10px;
+	border-radius: 0.3em;
+	margin: 5px;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	line-height: 1.5;
+	white-space: nowrap;
+}
