--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -1,5 +1,6 @@
 // Set your brand colors
 $purple: #3f51b5;
+// $blue: #2196F3;
 $pink: #FA7C91;
 // $brown: #b5b5b5;
 $beige-light: #D0D1CD;
@@ -12,11 +13,11 @@ $black: #16171a;
 
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
+// $family-sans-serif: "Nunito", sans-serif;
 // $grey-dark: $brown;
 $grey-dark: #282b30;
 $grey-light: $beige-light;
-$primary: $purple;
+$primary: $blue;
 $link: $green;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
