--- a/app/frontend/src/styles/index.scss
+++ b/app/frontend/src/styles/index.scss
@@ -8,8 +8,8 @@
 @import '~font-awesome/css/font-awesome.min.css';
 @import '~react-tagsinput/react-tagsinput.css' ;
 
-// Local styles
-@import 'main';
-@import 'spinner';
-@import 'searchresults';
-@import 'tags';
+// // Local styles
+// @import 'main';
+// @import 'spinner';
+// @import 'searchresults';
+// @import 'tags';
