--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -1,3 +1,5 @@
+@import '~bulma/sass/utilities/initial-variables';
+
 // Set your brand colors
 $purple: #3f51b5;
 // $blue: #2196F3;
@@ -18,7 +20,8 @@ $black: #16171a;
 $grey-dark: #282b30;
 $grey-light: $beige-light;
 $primary: $blue;
-$link: $green;
+$info: $pink;
+// $link: $green;
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
@@ -32,23 +35,4 @@ $navbar-item-color: $pink;
 $modal-content-width: auto;
 
 // Import only what you need from Bulma
-@import '~bulma/sass/utilities/_all.sass';
-@import '~bulma/sass/base/_all.sass';
-@import '~bulma/sass/elements/box.sass';
-@import '~bulma/sass/elements/button.sass';
-@import '~bulma/sass/elements/container.sass';
-@import '~bulma/sass/elements/form.sass';
-@import '~bulma/sass/elements/title.sass';
-@import '~bulma/sass/elements/content.sass';
-@import '~bulma/sass/components/modal.sass';
-@import '~bulma/sass/components/message.sass';
-@import '~bulma/sass/elements/image.sass';
-@import '~bulma/sass/components/card.sass';
-@import '~bulma/sass/components/navbar.sass';
-@import '~bulma/sass/components/tabs.sass';
-@import '~bulma/sass/layout/hero.sass';
-@import '~bulma/sass/components/level.sass';
-@import '~bulma/sass/grid/columns.sass';
-@import '~bulma/sass/layout/section.sass';
-
-@import '~bulma-steps/src/sass/index.sass';
+@import '~bulma/bulma.sass';
