add bulma steps import

--- a/app/frontend/src/styles/bulma.scss
+++ b/app/frontend/src/styles/bulma.scss
@@ -36,3 +36,4 @@ $modal-content-width: auto;
 
 // Import only what you need from Bulma
 @import '~bulma/bulma.sass';
+@import '~bulma-steps/src/sass/index.sass';
