--- a/app/frontend/src/styles/index.scss
+++ b/app/frontend/src/styles/index.scss
@@ -10,6 +10,6 @@
 
 // // Local styles
 // @import 'main';
-// @import 'spinner';
+@import 'spinner';
 // @import 'searchresults';
 // @import 'tags';
