--- a/app/frontend/src/styles/spinner.scss
+++ b/app/frontend/src/styles/spinner.scss
@@ -1,64 +1,16 @@
-// Curtosy of https://freefrontend.com/css-loaders/
-
 .spinner {
-	width: 66px; height: 66px;
-	
-	animation: contanim 2s linear infinite;
+  border: 0px;
+  background: rgba(0, 0, 0, 0);
 }
-
-$colors: $green, $blue, $yellow, $grey-dark;
-$d: 175.6449737548828;
-
-.spinner svg {
+button.is-loading.spinner::after {
+  animation: spinAround 500ms infinite linear;
+  border: 3px solid #FA7C91;
+  border-radius: 290486px;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  content: "";
   display: block;
-
-	width: 100%; height: 100%;
-	
-	left: 0; top: 0;
-	position: absolute;
-	
-	transform: rotate(-90deg);
-	
-	@for $i from 1 through 4 {		
-		&:nth-child(#{$i}) circle {
-			stroke: nth($colors, $i);
-			stroke-dasharray: 1, 300;
-			stroke-dashoffset: 0;
-			
-			animation: strokeanim 3s calc(.2s * (#{$i})) ease infinite;
-			transform-origin: center center;
-		}
-	}
-}
-
-.full-page {
-  height: 100%;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#root > .full-page {
-	height: calc(100vh - 150px);
-}
-
-@keyframes strokeanim {
-	0% {
-    stroke-dasharray: 1, 300;
-    stroke-dashoffset: 0;
-  }
-  50% {
-    stroke-dasharray: 120, 300;
-    stroke-dashoffset: -$d / 3;
-  }
-  100% {
-    stroke-dasharray: 120, 300;
-    stroke-dashoffset: -$d;
-  }
-}
-
-@keyframes contanim {
-	100% {
-		transform: rotate(360deg)
-	}
+  height: 1.5em;
+  position: relative;
+  width: 1.5em;
 }
